--- a/InvestmentBuilderServiceTestRunner/InvestmentBuilderServiceTestRunner.csproj
+++ b/InvestmentBuilderServiceTestRunner/InvestmentBuilderServiceTestRunner.csproj
@@ -1,48 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A1B060C6-10FA-443B-8191-556D1B03102F}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{4A92ED66-F595-49DE-9CF6-890EEDB908EE}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InvestmentBuilderCore</RootNamespace>
-    <AssemblyName>InvestmentBuilderCore</AssemblyName>
+    <RootNamespace>InvestmentBuilderServiceTestRunner</RootNamespace>
+    <AssemblyName>InvestmentBuilderServiceTestRunner</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>bin\Release\</OutputPath>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="MiddlewareInterfaces">
+      <HintPath>..\..\Middleware\Middleware\bin\Debug\MiddlewareInterfaces.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Practices.Unity.Configuration, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="MiddlewareNetClient">
+      <HintPath>..\..\Middleware\Middleware\bin\Debug\MiddlewareNetClient.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -63,38 +61,28 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountModel.cs" />
-    <Compile Include="AssetReport.cs" />
-    <Compile Include="AuthorizationManager.cs" />
-    <Compile Include="ConfigurationSettings.cs" />
-    <Compile Include="ContainerManager.cs" />
-    <Compile Include="DataLayerContracts.cs" />
-    <Compile Include="DatasetNormaliser.cs" />
-    <Compile Include="IAuthDataLayer.cs" />
-    <Compile Include="IDataLayer.cs" />
-    <Compile Include="IInvestmentReportWriter.cs" />
-    <Compile Include="IndexData.cs" />
-    <Compile Include="InvestmentBuilderLogger.cs" />
-    <Compile Include="InvestmentInformation.cs" />
-    <Compile Include="InvestmentUtils.cs" />
-    <Compile Include="ProcessLauncher.cs" />
-    <Compile Include="ProgressCounter.cs" />
+    <Compile Include="Assert.cs" />
+    <Compile Include="RequestEndpoint.cs" />
+    <Compile Include="TestRunner.cs" />
+    <Compile Include="ConnectionService.cs" />
+    <Compile Include="Requests.cs" />
+    <Compile Include="InvestmentBuilderServiceTestRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaltedHash.cs" />
-    <Compile Include="Schedule\IScheduledTask.cs" />
-    <Compile Include="Schedule\ScheduledTaskDetails.cs" />
-    <Compile Include="Schedule\ScheduledTaskFactory.cs" />
-    <Compile Include="Schedule\Scheduler.cs" />
-    <Compile Include="TradeLoader.cs" />
+    <Compile Include="Tests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InvestmentBuilderCore\InvestmentBuilderCore.csproj">
+      <Project>{a1b060c6-10fa-443b-8191-556d1b03102f}</Project>
+      <Name>InvestmentBuilderCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
