--- a/InvestmentBuilderService/InvestmentBuilderService.csproj
+++ b/InvestmentBuilderService/InvestmentBuilderService.csproj
@@ -36,6 +36,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DataEncryption">
+      <HintPath>..\..\DataEncryption\bin\Release\DataEncryption.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.Unity, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
       <Private>True</Private>
@@ -116,7 +119,7 @@
     <Compile Include="ServiceAggregator.cs" />
     <Compile Include="Session\IConnectionSession.cs" />
     <Compile Include="Dtos\InvestmentSummaryModel.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="InvestmentBuilderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Channels\UpdateCurrentAccountChannel.cs" />
     <Compile Include="Session\MiddlewareSession.cs" />
@@ -169,11 +172,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="InvestmentBuilderConfig.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>C:\Projects\DataEncryption\bin\Release\Encrypter.exe E $(ProjectDir)InvestmentBuilderConfig.xml $(TargetDir)InvestmentBuilderConfig.enc CERT_SIGN_CONFIGURATION
+C:\Projects\DataEncryption\bin\Release\Encrypter.exe E $(ProjectDir)Connections.xml $(TargetDir)Connections.enc CERT_SIGN_CONFIGURATION</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
