--- a/InvestmentBuilderServiceTestRunner/InvestmentBuilderServiceTestRunner.csproj
+++ b/InvestmentBuilderServiceTestRunner/InvestmentBuilderServiceTestRunner.csproj
@@ -40,7 +40,7 @@
       <HintPath>..\..\Middleware\Middleware\bin\Debug\MiddlewareInterfaces.dll</HintPath>
     </Reference>
     <Reference Include="MiddlewareNetClient">
-      <HintPath>..\..\Middleware\Middleware\bin\Debug\MiddlewareNetClient.dll</HintPath>
+      <HintPath>..\..\Middleware\Middleware\MiddlewareNetClient\bin\Debug\MiddlewareNetClient.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
