--- a/React/investment-builder-client/package.json
+++ b/React/investment-builder-client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "ag-grid-community": "^25.2.1",
+    "ag-grid-enterprise": "^25.2.1",
     "ag-grid-react": "^25.2.0",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
