--- a/InvestmentBuilderClient/packages.config
+++ b/InvestmentBuilderClient/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
-  <package id="NLog" version="4.5.5" targetFramework="net461" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="NLog" version="4.7.10" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="Unity" version="5.11.10" targetFramework="net472" />
 </packages>
