--- a/InvestmentBuilderService/App.config
+++ b/InvestmentBuilderService/App.config
@@ -7,15 +7,7 @@
   <nlog throwExceptions="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
       <target name="consoleLogger" xsi:type="Console" layout="${level} ${message}"></target>
-      <target name="fileLogger"
-              xsi:type="File"
-              layout="${longdate} ${callsite} ${level} ${message}"
-              fileName="InvestmentBuilderService.log"
-              deleteOldFileOnStartup="true"
-              maxArchiveFiles="30"
-              archiveFileName="archive/InvestmentBuilderService_{###}.log"
-              archiveNumbering="Rolling"
-              archiveEvery="Day">
+      <target name="fileLogger" xsi:type="File" layout="${longdate} ${callsite} ${level} ${message}" fileName="InvestmentBuilderService.log" deleteOldFileOnStartup="true" maxArchiveFiles="30" archiveFileName="archive/InvestmentBuilderService_{###}.log" archiveNumbering="Rolling" archiveEvery="Day">
       </target>
     </targets>
     <rules>
@@ -31,4 +23,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
