--- a/InvestmentReportGenerator/packages.config
+++ b/InvestmentReportGenerator/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
-  <package id="NLog" version="4.5.5" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="NLog" version="4.7.10" targetFramework="net472" />
   <package id="PDFsharp-MigraDoc-GDI" version="1.32.4334.0" targetFramework="net452" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="Unity" version="5.11.10" targetFramework="net472" />
 </packages>
