--- a/SQLServerDataLayer/packages.config
+++ b/SQLServerDataLayer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NLog" version="4.5.5" targetFramework="net461" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package id="NLog" version="4.7.10" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="Unity" version="5.11.10" targetFramework="net472" />
 </packages>
