--- a/React/investment-builder-client/package.json
+++ b/React/investment-builder-client/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.0",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
