Add Debug mode to investmentbuilder service. Add Build Report worflow to react UI.

--- a/InvestmentBuilderService/InvestmentBuilderService.csproj
+++ b/InvestmentBuilderService/InvestmentBuilderService.csproj
@@ -39,6 +39,9 @@
     <Reference Include="DataEncryption">
       <HintPath>..\..\DataEncrypter\bin\Debug\DataEncryption.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Extensions.CommandLineUtils, Version=1.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Extensions.CommandLineUtils.1.1.1\lib\net451\Microsoft.Extensions.CommandLineUtils.dll</HintPath>
+    </Reference>
     <Reference Include="MiddlewareInterfaces">
       <HintPath>..\..\Middleware\bin\Debug\MiddlewareInterfaces.dll</HintPath>
     </Reference>
